Bug 1015029: Use OMX_VIDEO_ControlRateConstantSkipFrames mode for H.264 OMX encoder r=jhlin